--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <script src="./app/js/script.js"></script>
 </head>
 <body>
-    <p>Primer commit</p>
-    
+    <header>
+        <nav>
+            <a class="logo" href="/">
+                <img src="./images/logo.svg" alt="Easybank">
+            </a>
+            <div class="nav-links">
+                <a href="/">Home</a>
+                <a href="/">About</a>
+                <a href="/">Contact</a>
+                <a href="/">Blog</a>
+                <a href="/">Careers</a>
+            </div>
+            <a href="/" class="button">Request invite</a>
+        </nav>
+    </header>
 </body>
 </html>
